[gd_scene load_steps=21 format=2]

[ext_resource path="res://resources/Enemies/Bat.png" type="Texture" id=1]
[ext_resource path="res://resources/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://resources/Hurtboxes + Hitboxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/Enemies/Bat.gd" type="Script" id=4]
[ext_resource path="res://resources/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/Hurtboxes + Hitboxes/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/Hurtboxes + Hitboxes/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/Enemies/WanderController.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Fly",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 8.0
height = 4.0

[sub_resource type="CircleShape2D" id=9]
radius = 48.6621

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CircleShape2D" id=11]
radius = 7.0

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="BatAnimSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Fly"
frame = 2
offset = Vector2( 0, -12 )

[node name="BatShadowSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="BatCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -13 )
shape = SubResource( 8 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 0.866667, 0.603922, 1, 1 )
shape = SubResource( 9 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -16 )
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
